Additional width/height fixes
There was some overflow causing scrollbars to display. The result was to
remove <header> specific CSS style and when creating the <canvas>,
before it is populated by Trianglify, leave width, height = 0, 0.
Trianglify will change the width and height  dynamically at runtime

--- a/main.css
+++ b/main.css
@@ -6,10 +6,6 @@ body {
   font-family: Myriad Pro;
   margin: 0;
 }
-header {
-  width: 100%;
-  height: 100%;
-}
 #logo {
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.8);
